# magic-eye

./: .gitignore  CMakeLists.txt  NEXT_SESSION_README.md  README.md  idf_component.yml  platformio.ini  sdkconfig.defaults  sdkconfig.mjpeg.defaults
docs/: media-prep.md  waveshare-esp32s3-2p1-notes.md
idf5_round_mjpeg/: CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
idf5_round_mjpeg/components/waveshare_round_hw/: CMakeLists.txt  Display_ST7701.cpp  Display_ST7701.h  I2C_Driver.cpp  I2C_Driver.h  TCA9554PWR.cpp
idf5_round_mjpeg/main/: CMakeLists.txt  app_main.cpp  idf_component.yml  sdcard_mount.c  sdcard_mount.h
src/: CMakeLists.txt  DisplayCanvas.cpp  DisplayCanvas.h  Display_ST7701.cpp  Display_ST7701.h  MediaDemo.cpp  MediaDemo.h  Panel_ST7701.hpp  Touch_CST820.cpp  Touch_CST820.h  idf_component.yml  idf_stub.c  main.cpp  main_mjpeg_avi.cpp
tools/: prepare_media.py
